updated sendEmail() route

--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-ACCESS_KEY=AKIA3SUKIR2QT2CX6TOZ
-SECRET_ACCESS_KEY=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
-MYSQL_PASSWORD=b2e73206
+VUE_APP_API_URL=https://dash-video-app-f3278d790d24.herokuapp.com/
